; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_error.c_svn_error_raise_on_malfunction.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_error.c_svn_error_raise_on_malfunction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_ERR_ASSERTION_FAIL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"In file '%s' line %d: assertion failed (%s)\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"In file '%s' line %d: internal malfunction\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_error_raise_on_malfunction(i32 %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %4
  %13 = call i32 (...) @abort() #3
  unreachable

14:                                               ; preds = %4
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @svn_error__locate(i8* %15, i32 %16)
  %18 = load i8*, i8** %9, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %14
  %21 = load i32, i32* @SVN_ERR_ASSERTION_FAIL, align 4
  %22 = call i32 @_(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %23 = load i8*, i8** %7, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load i8*, i8** %9, align 8
  %26 = call i32* (i32, i32*, i32, i8*, i32, ...) @svn_error_createf(i32 %21, i32* null, i32 %22, i8* %23, i32 %24, i8* %25)
  store i32* %26, i32** %5, align 8
  br label %33

27:                                               ; preds = %14
  %28 = load i32, i32* @SVN_ERR_ASSERTION_FAIL, align 4
  %29 = call i32 @_(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %30 = load i8*, i8** %7, align 8
  %31 = load i32, i32* %8, align 4
  %32 = call i32* (i32, i32*, i32, i8*, i32, ...) @svn_error_createf(i32 %28, i32* null, i32 %29, i8* %30, i32 %31)
  store i32* %32, i32** %5, align 8
  br label %33

33:                                               ; preds = %27, %20
  %34 = load i32*, i32** %5, align 8
  ret i32* %34
}

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #1

declare dso_local i32 @svn_error__locate(i8*, i32) #2

declare dso_local i32* @svn_error_createf(i32, i32*, i32, i8*, i32, ...) #2

declare dso_local i32 @_(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
